2012-08-13 Borut Razem <borut.razem AT gmail.com>
	* support/regression/tests/bitvars.c,
	  support/regression/tests/funsigned-char.c:
	  fixed for gcc hosts with unsigned char (ARM architecture)

2012-08-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Improve code generation for and with result in register and bit complement operand.

2012-08-04 Borut Razem <borut.razem AT gmail.com>
	* device/include/pic14/pic14devices.txt:
	  applied patch minor-pic12lf1552-error.diff from
	  #3553952 - "New devices to pic14 series and pic16fam-h-gen.pl update II."
	  thanks to Molnar Karoly

2012-08-03 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/pic16fam-h-gen.pl,
	  device/include/pic14/pic14devices.txt,
	  device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/include/pic14/pic16fam.h,
	  doc/sdccman.lyx: updated,
	  device/non-free/include/pic14/pic16f723a.h,
	  device/non-free/include/pic14/pic16f1512.h,
	  device/non-free/include/pic14/pic16f723.h,
	  device/non-free/include/pic14/pic16f727.h,
	  device/non-free/include/pic14/pic12f617.h,
	  device/non-free/include/pic14/pic16f1513.h,
	  device/non-free/include/pic14/pic12f609.h,
	  device/non-free/include/pic14/pic16f724.h,
	  device/non-free/include/pic14/pic16f707.h,
	  device/non-free/include/pic14/pic12lf1552.h,
	  device/non-free/include/pic14/pic16f610.h,
	  device/non-free/include/pic14/pic16f631.h,
	  device/non-free/include/pic14/pic16f677.h,
	  device/non-free/include/pic14/pic16f722a.h,
	  device/non-free/include/pic14/pic12f615.h,
	  device/non-free/include/pic14/pic16f722.h,
	  device/non-free/include/pic14/pic16f726.h,
	  device/non-free/lib/pic14/libdev/pic16f723.c,
	  device/non-free/lib/pic14/libdev/pic16f727.c,
	  device/non-free/lib/pic14/libdev/pic12f617.c,
	  device/non-free/lib/pic14/libdev/pic16f1513.c,
	  device/non-free/lib/pic14/libdev/pic12f609.c,